--- a/lilith-data/logging/pom.xml
+++ b/lilith-data/logging/pom.xml
@@ -8,6 +8,12 @@
 	<name>Lilith Data Types - Logging</name>
 	<url>http://lilith.huxhorn.de</url>
 
+	<scm>
+		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-data/logging</connection>
+		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-data/logging</developerConnection>
+		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/lilith-data/logging/</url>
+	</scm>
+
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
