--- a/lilith-data/eventsource/pom.xml
+++ b/lilith-data/eventsource/pom.xml
@@ -9,6 +9,12 @@
 	<name>Lilith Data Types - Event Source</name>
 	<url>http://lilith.huxhorn.de</url>
 
+	<scm>
+		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-data/eventsource</connection>
+		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-data/eventsource</developerConnection>
+		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/lilith-data/eventsource/</url>
+	</scm>
+
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
