--- a/logback/multiplex-appender-core/pom.xml
+++ b/logback/multiplex-appender-core/pom.xml
@@ -6,8 +6,14 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Logback Multiplex Appender Core</name>
-	<url>http://maven.apache.org</url>
+	<url>http://lilith.huxhorn.de</url>
 	
+	<scm>
+		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/logback/multiplex-appender-core</connection>
+		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/logback/multiplex-appender-core</developerConnection>
+		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/logback/multiplex-appender-core/</url>
+	</scm>
+
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
