--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.parent</artifactId>
-<!-- LV --><version>0.9.29-SNAPSHOT</version>
+<!-- LV --><version>0.9.29</version>
 	<packaging>pom</packaging>
 	<name>Lilith parent pom file</name>
 	<url>http://lilith.huxhorn.de</url>
@@ -16,7 +16,7 @@
 
 	<properties>
 		<lilithVersion>${pom.version}</lilithVersion>
-<!-- SV --><sulkyVersion>0.9.2-SNAPSHOT</sulkyVersion>
+<!-- SV --><sulkyVersion>0.9.2</sulkyVersion>
 		<springVersion>2.0.3</springVersion>
 		<commonsLoggingVersion>1.1</commonsLoggingVersion>
 		<slf4jVersion>1.5.0</slf4jVersion>
