--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.logback.master</artifactId>
-<!-- LV --><version>0.9.29-SNAPSHOT</version>
+<!-- LV --><version>0.9.29</version>
 	<packaging>pom</packaging>
 	<name>Lilith Data master pom file</name>
 	<url>http://lilith.huxhorn.de</url>
@@ -14,6 +14,17 @@
 		<developerConnection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/logback</developerConnection>
 		<url>http://lilith.svn.sourceforge.net/viewvc/lilith/trunk/logback/</url>
 	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>lilith-repos</id>
+			<url>scp://shell.sourceforge.net/home/groups/l/li/lilith/htdocs/repository</url>
+		</repository>
+		<snapshotRepository>
+			<id>lilith-snapshot-repos</id>
+			<url>scp://shell.sourceforge.net/home/groups/l/li/lilith/htdocs/snapshot-repository</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<modules>
 		<module>logging-adapter</module>
