Starting work on 0.9.30-SNAPSHOT
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@5 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.master</artifactId>
-<!-- LV --><version>0.9.29</version>
+<!-- LV --><version>0.9.30-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Lilith master pom file</name>
 	<url>http://lilith.huxhorn.de</url>
