--- a/lilith-sounds/pom.xml
+++ b/lilith-sounds/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-<!-- LV --><version>0.9.29</version>
+<!-- LV --><version>0.9.30-SNAPSHOT</version>
 		<relativePath>../lilith-parent</relativePath>
 	</parent>
 
