--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -248,7 +248,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>3.8.2</version>
+				<version>4.4</version>
 			</dependency>
 			
 			<dependency>
@@ -354,6 +354,7 @@
 		</dependencies>
 	</dependencyManagement>
 	
+	<!--
 	<repositories>
 		<repository>
 			<id>central</id>
@@ -408,7 +409,6 @@
 			</releases>
 		</pluginRepository>
 		<pluginRepository>
-			<!-- maven-buildnumber-plugin -->
 			<id>tlc</id>
 			<name>TLC Repository</name>
 			<url>http://commons.ucalgary.ca/pub/m2</url>
@@ -438,7 +438,7 @@
 			</releases>
 		</pluginRepository>
 	</pluginRepositories>
-	
+	-->
 	
 	<developers>
 		<developer>
@@ -551,12 +551,36 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
-				<version>2.2-SNAPSHOT</version>
+				<version>2.2</version>
 				<configuration>
-					<keepingRootDirectories>true</keepingRootDirectories>
+                    <failOnError>false</failOnError>
 				</configuration>
 			</plugin>
 			
+			<plugin>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!--
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>maven-buildnumber-plugin</artifactId>
@@ -578,6 +602,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -618,8 +643,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-idea-plugin</artifactId>
-				<version>2.2-SNAPSHOT</version>
-				<!-- <version>2.1</version> -->
+				<version>2.1</version>
+				<!-- <version>2.2-SNAPSHOT</version> -->
 				<!--
 				<configuration>
 					<downloadSources>true</downloadSources>
