--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -122,21 +122,33 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.macify</artifactId>
+			<version>1.1</version>
+			<!--
 			<groupId>org.simplericity.macify</groupId>
 			<artifactId>macify</artifactId>
 			<version>1.0</version>
+			-->
 			<scope>compile</scope>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>napkinlaf</groupId>
 			<artifactId>napkinlaf</artifactId>
 			<version>1.0.001</version>
 			<scope>compile</scope>
 		</dependency>
+		-->
 		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.jmdns</artifactId>
+			<version>2.0-patched</version>
+			<!--
 			<groupId>jmdns</groupId>
 			<artifactId>jmdns</artifactId>
 			<version>2.1-SNAPSHOT</version>
+			-->
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -276,9 +288,14 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.rrd4j</artifactId>
+			<version>2.0.5</version>
+			<!--
 			<groupId>rrd4j</groupId>
 			<artifactId>rrd4j</artifactId>
 			<version>2.0.5</version>
+			-->
 			<scope>compile</scope>
 		</dependency>
 
@@ -317,9 +334,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>de.huxhorn.lilith</groupId>
+			<artifactId>de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer</artifactId>
+			<version>8Pre2</version>
+			<!--
 			<groupId>flyingsaucer</groupId>
 			<artifactId>core-renderer</artifactId>
 			<version>8Pre2</version>
+			-->
 			<scope>compile</scope>
 		</dependency>
 
