--- a/jul-slf4j-handler/pom.xml
+++ b/jul-slf4j-handler/pom.xml
@@ -7,7 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>java.util.logging Handler using SLF4J</name>
-	<url>http://lilith.huxhorn.de</url>
+	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
 		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/jul-slf4j-handler</connection>
