--- a/lilith-data/eventsource/pom.xml
+++ b/lilith-data/eventsource/pom.xml
@@ -7,7 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Event Source</name>
-	<url>http://lilith.huxhorn.de</url>
+	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 
 	<scm>
 		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-data/eventsource</connection>
