--- a/logback/multiplex-appender-access/pom.xml
+++ b/logback/multiplex-appender-access/pom.xml
@@ -7,7 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Logback Multiplex Appender Access</name>
-	<url>http://lilith.huxhorn.de</url>
+	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
 		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/logback/multiplex-appender-access</connection>
