--- a/logback/multiplex-appender-classic-xml/pom.xml
+++ b/logback/multiplex-appender-classic-xml/pom.xml
@@ -6,7 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Logback Multiplex Appender Classic - XML</name>
-	<url>http://lilith.huxhorn.de</url>
+	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
 		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/logback/multiplex-appender-classic-xml</connection>
