--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -17,9 +17,6 @@
 	<properties>
 		<lilithVersion>${pom.version}</lilithVersion>
 <!-- SV --><sulkyVersion>0.9.3-SNAPSHOT</sulkyVersion>
-		<!--
-		<springVersion>2.0.3</springVersion>
-		-->
 		<commonsLoggingVersion>1.1</commonsLoggingVersion>
 		<slf4jVersion>1.5.0</slf4jVersion>
 		<logbackVersion>0.9.9</logbackVersion>
@@ -32,6 +29,11 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+	<issueManagement>
+		<system>sourceforge</system>
+		<url>https://sourceforge.net/tracker/?group_id=219536</url>
+	</issueManagement>
 
 	<distributionManagement>
 		<site>
@@ -257,70 +259,6 @@
 				<version>4.4</version>
 			</dependency>
 			
-			<!--
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-aop</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-beans</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-core</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-jdbc</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-dao</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-remoting</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-support</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-web</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-webmvc</artifactId>
-				<version>${springVersion}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.springmodules</groupId>
-				<artifactId>spring-modules-cache</artifactId>
-				<version>${springModulesVersion}</version>
-			</dependency>
-			-->
-			
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
@@ -347,13 +285,11 @@
 				<artifactId>logback-core</artifactId>
 				<version>${logbackVersion}</version>
 			</dependency>
-			
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>${logbackVersion}</version>
 			</dependency>
-			
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-access</artifactId>
@@ -361,92 +297,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
-	<!--
-	<repositories>
-		<repository>
-			<id>central</id>
-			<name>Maven Repository Switchboard@maven.org</name>
-			<layout>default</layout>
-			<url>http://repo1.maven.org/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>mirror</id>
-			<name>Maven Repository Switchboard@ibiblio.org</name>
-			<layout>default</layout>
-			<url>http://www.ibiblio.org/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>simplericity</id>
-			<name>simplericity Repository</name>
-			<layout>default</layout>
-			<url>http://simplericity.org/repository/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	
-	<pluginRepositories>
-		<pluginRepository>
-			<id>Codehaus snapshot</id>
-			<url>http://snapshots.repository.codehaus.org/</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</pluginRepository>
-		<pluginRepository>
-			<id>Codehaus release</id>
-			<url>http://repository.codehaus.org/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-		</pluginRepository>
-		<pluginRepository>
-			<id>tlc</id>
-			<name>TLC Repository</name>
-			<url>http://commons.ucalgary.ca/pub/m2</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>lsuedu</id>
-			<name>Maven Plugin Repository@lsu.edu</name>
-			<url>http://ibiblio.lsu.edu/main/pub/packages/maven2</url>
-			<layout>default</layout>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-		</pluginRepository>
-		<pluginRepository>
-			<id>central</id>
-			<name>Maven Plugin Repository@maven.org</name>
-			<url>http://repo1.maven.org/maven2</url>
-			<layout>default</layout>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-		</pluginRepository>
-	</pluginRepositories>
-	-->
 	
 	<developers>
 		<developer>
@@ -466,11 +316,12 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.4</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>taglist-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.2</version>
 				<configuration>
 					<tags>
 						<tag>TODO</tag>
@@ -483,17 +334,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.1</version>
 			</plugin>
-			<!--
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jxr-maven-plugin</artifactId>
-				<version>2.0-beta-2-20051227.194205-3</version>
-			</plugin>
-			-->
-			<!-- does not work with 1.5 yet...
-			-->
 			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -511,19 +353,17 @@
 					<targetJdk>1.5</targetJdk>
 				</configuration>
 			</plugin>
-			endless loop on site generation :(
+			endless loop on site generation of lilith :(
 			-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-<!--
-				<version>2.1</version>
--->
+				<version>2.2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>1.0.0</version>
+				<version>1.2</version>
 				<!--
 				<configuration>
 					<threshold>High|Normal|Low|Exp|Ignore</threshold>
@@ -533,7 +373,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
-				<version>2.0-beta-1</version>
+				<version>2.0-beta-2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -543,7 +383,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changes-plugin</artifactId>
-				<version>2.0-beta-2</version>
+				<version>2.0</version>
 				<reportSets>
 					<reportSet>
 						<reports>
@@ -551,11 +391,30 @@
 						</reports>
 					</reportSet>
 				</reportSets>
+				<configuration>
+					<issueLinkTemplate>http://sourceforge.net/support/tracker.php?aid=%ISSUE%</issueLinkTemplate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-changelog-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<type>range</type>
+					<range>90</range>
+				</configuration>
 			</plugin>
 		</plugins>
 	</reporting>
 	
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>1.0-beta-2</version>
+			</extension>
+		</extensions>
 		<plugins>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
@@ -567,6 +426,7 @@
 			
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.4</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -578,6 +438,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>2.0.4</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -587,7 +448,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
@@ -609,11 +469,10 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--
-			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
@@ -624,6 +483,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -632,18 +492,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!--
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.2rc4</version>
-				<!-- 
-				call "mvn -Dslf4j=false jetty:run"
-				if slf4j should be enabled on application layer
-				-->
 			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.0</version>
 				<configuration>
 					<goals>install</goals>
 				</configuration>
@@ -652,7 +511,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-idea-plugin</artifactId>
 				<version>2.1</version>
-				<!-- <version>2.2-SNAPSHOT</version> -->
 				<!--
 				<configuration>
 					<downloadSources>true</downloadSources>
