- Preparing central maven repository release. Added prosa.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@9 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -6,6 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Engine</name>
+	<description>This file is part of Lilith. It contains the engine part of Lilith.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
