--- a/jul-slf4j-handler/pom.xml
+++ b/jul-slf4j-handler/pom.xml
@@ -7,6 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>java.util.logging Handler using SLF4J</name>
+	<description>This file is part of Lilith. It's a java.util.logging to slf4j bridge handler.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
