--- a/lilith-data/access/pom.xml
+++ b/lilith-data/access/pom.xml
@@ -6,6 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Access</name>
+	<description>This file is part of Lilith. It contains the AccesEvent datatype and related classes.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
