--- a/lilith-data/eventsource-xml/pom.xml
+++ b/lilith-data/eventsource-xml/pom.xml
@@ -6,7 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Event Source - XML (StaX)</name>
-	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
+	<description>This file is part of Lilith. It contains XML I/O for EventSource.</description>	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
 		<connection>scm:svn:https://lilith.svn.sourceforge.net/svnroot/lilith/trunk/lilith-data/eventsource-xml</connection>
