--- a/lilith-data/eventsource/pom.xml
+++ b/lilith-data/eventsource/pom.xml
@@ -7,6 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Event Source</name>
+	<description>This file is part of Lilith. It contains the EventSource datatype and related classes.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 
 	<scm>
