--- a/lilith-data/logging-xml-serializer/pom.xml
+++ b/lilith-data/logging-xml-serializer/pom.xml
@@ -6,6 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Logging - XML De/Serializer</name>
+	<description>This file is part of Lilith. It contains XML De/Serializer for LoggingEvent.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
