--- a/lilith-data/logging-xml/pom.xml
+++ b/lilith-data/logging-xml/pom.xml
@@ -6,6 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Logging - XML (StaX)</name>
+	<description>This file is part of Lilith. It contains XML I/O for LoggingEvent.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
