--- a/lilith-data/logging/pom.xml
+++ b/lilith-data/logging/pom.xml
@@ -6,6 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Logging</name>
+	<description>This file is part of Lilith. It contains the LoggingEvent datatype and related classes.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 
 	<scm>
