--- a/lilith-data/pom.xml
+++ b/lilith-data/pom.xml
@@ -7,6 +7,7 @@
 <!-- LV --><version>0.9.30-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Lilith Data master pom file</name>
+	<description>This file is part of Lilith. It's the master pom file that is used to build all data modules.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 
 	<scm>
