--- a/lilith-sender/pom.xml
+++ b/lilith-sender/pom.xml
@@ -7,6 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith Sender</name>
+	<description>This file is part of Lilith. It contains the event sender definition.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
