--- a/lilith-sounds/pom.xml
+++ b/lilith-sounds/pom.xml
@@ -7,6 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith default sounds</name>
+	<description>This file is part of Lilith. It contains the sound files of Lilith.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
