--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -6,6 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Lilith</name>
+	<description>This file is part of Lilith. It's the Lilith application itself.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
