--- a/logback/logging-adapter/pom.xml
+++ b/logback/logging-adapter/pom.xml
@@ -6,6 +6,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Logback Logging Adapter</name>
+	<description>This file is part of Lilith. It contains the adapter to translate from logback to lilith logging events.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
