--- a/logback/multiplex-appender-access/pom.xml
+++ b/logback/multiplex-appender-access/pom.xml
@@ -7,6 +7,7 @@
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
 	<name>Logback Multiplex Appender Access</name>
+	<description>This file is part of Lilith. It contains the multiplexing access appender.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
