renamed assembly to bin instead of dep.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@16 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -69,7 +69,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptors>
-						<descriptor>src/main/assembly/dep.xml</descriptor>
+						<descriptor>src/main/assembly/bin.xml</descriptor>
 					</descriptors>
 				</configuration>
 				<executions>
