--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.logback.master</artifactId>
-<!-- LV --><version>0.9.31-SNAPSHOT</version>
+<!-- LV --><version>0.9.31</version>
 	<packaging>pom</packaging>
 	<name>Lilith Logback master pom file</name>
 	<description>This file is part of Lilith. It's the master pom file that is used to build all logback modules.</description>
