--- a/jul-slf4j-handler/pom.xml
+++ b/jul-slf4j-handler/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-<!-- LV --><version>0.9.31</version>
+<!-- LV --><version>0.9.32-SNAPSHOT</version>
 		<relativePath>../lilith-parent</relativePath>
 	</parent>
 	
