- preparing for logback 0.9.10, i.e. CodeLocation, Version & Exact in StackTraceElement.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@31 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -39,6 +39,7 @@
 		<module>multiplex-appender-classic</module>
 		<module>multiplex-appender-access</module>
 		<module>multiplex-appender-classic-xml</module>
+		<module>shutdown-context-listener</module>
 	</modules>
 
 </project>
