--- a/lilith-data/pom.xml
+++ b/lilith-data/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.data.master</artifactId>
-<!-- LV --><version>0.9.32-SNAPSHOT</version>
+<!-- LV --><version>0.9.32</version>
 	<packaging>pom</packaging>
 	<name>Lilith Data master pom file</name>
 	<description>This file is part of Lilith. It's the master pom file that is used to build all data modules.</description>
