--- a/lilith-data/eventsource-xml/pom.xml
+++ b/lilith-data/eventsource-xml/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-<!-- LV --><version>0.9.32</version>
+<!-- LV --><version>0.9.33-SNAPSHOT</version>
 		<relativePath>../../lilith-parent</relativePath>
 	</parent>
 	
