--- a/lilith-idea-plugin/META-INF/plugin.xml
+++ b/lilith-idea-plugin/META-INF/plugin.xml
@@ -26,8 +26,8 @@ This plugin opens a server socket on port 11111 and waits for connections, expec
 <ul>
 	<li>0.0.3 - 2008-11-17
 	<ul>
-		<li>Updated to support (and require) IDEA 8.0</li>
-		<li>Only accepting connections from localhost</li>
+		<li>Updated to support both IDEA 7 and IDEA 8.</li>
+		<li>Only accepting connections from 127.0.0.1.</li>
 	</ul></li>
 
 	<li>0.0.2 - 2008-04-06
