--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -133,14 +133,20 @@
 			-->
 			<scope>compile</scope>
 		</dependency>
-		<!--
+        <!--
 		<dependency>
 			<groupId>napkinlaf</groupId>
 			<artifactId>napkinlaf</artifactId>
 			<version>1.0.001</version>
 			<scope>compile</scope>
 		</dependency>
-		-->
+        -->
+        <dependency>
+            <groupId>com.jgoodies</groupId>
+            <artifactId>looks</artifactId>
+            <version>2.2.0</version>
+            <scope>runtime</scope>
+        </dependency>
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.3rdparty.jmdns</artifactId>
