Updated groovy to 1.6-RC-1.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@90 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -196,7 +196,10 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId>
+			<!--
 			<version>1.5.7</version>
+			-->
+			<version>1.6-RC-1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
