--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -18,7 +18,9 @@
 	<properties>
 		<lilithVersion>${pom.version}</lilithVersion>
 <!-- SV --><sulkyVersion>0.9.5-SNAPSHOT</sulkyVersion>
+        <!--
 		<commonsLoggingVersion>1.1</commonsLoggingVersion>
+		-->
 		<slf4jVersion>1.5.5</slf4jVersion>
 		<logbackVersion>0.9.9</logbackVersion>
 	</properties>
@@ -147,7 +149,7 @@
 			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
-				<artifactId>de.huxhorn.lilith.lilith</artifactId>
+				<artifactId>de.huxhorn.lilith</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
 			
@@ -175,12 +177,14 @@
 				<version>${lilithVersion}</version>
 			</dependency>
 
+            <!--
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logging-repository-ws</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
-			
+			-->
+
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.stax</artifactId>
@@ -227,6 +231,12 @@
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
 				<version>1.0</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>                
 			</dependency>
 			
 			<dependency>
@@ -240,14 +250,32 @@
 				<artifactId>commons-io</artifactId>
 				<version>1.3.1</version>
 			</dependency>
-			
+
+            <dependency>
+                <groupId>commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>3.1</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+                <!-- This will likely move to:
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.0</version>
+                -->
+            </dependency>
+
 			
 			<dependency>
 				<groupId>log4j</groupId>
 				<artifactId>log4j</artifactId>
-				<version>1.2.14</version>
+				<version>1.2.15</version>
 			</dependency>
-			
+
+            <!--
 			<dependency>
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging-api</artifactId>
@@ -258,7 +286,8 @@
 				<artifactId>commons-logging</artifactId>
 				<version>${commonsLoggingVersion}</version>
 			</dependency>
-			
+			-->
+
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
@@ -276,11 +305,7 @@
 				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4jVersion}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4jVersion}</version>
-			</dependency>
+
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
@@ -312,7 +337,6 @@
 			<name>Joern Huxhorn</name>
 			<organization>Joern Huxhorn</organization>
 			<organizationUrl>http://lilith.huxhorn.de</organizationUrl>
-			<properties></properties>
 			<roles>
 				<role>Developer</role>
 			</roles>
