Fixed parent... just for IDEA!
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@96 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-data/logging-xml-serializer/pom.xml
+++ b/lilith-data/logging-xml-serializer/pom.xml
@@ -19,7 +19,7 @@
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
 <!-- LV --><version>0.9.33-SNAPSHOT</version>
-		<relativePath>../../lilith-parent</relativePath>
+		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
 	<licenses>
@@ -48,7 +48,6 @@
 			<artifactId>stax</artifactId>
 			<version>1.2.0</version>
 			<scope>test</scope>
-			<optional />
 		</dependency>
 		
 		<dependency>
