--- a/lilith-sounds/pom.xml
+++ b/lilith-sounds/pom.xml
@@ -20,7 +20,7 @@
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
 <!-- LV --><version>0.9.33-SNAPSHOT</version>
-		<relativePath>../lilith-parent</relativePath>
+		<relativePath>../lilith-parent/pom.xml</relativePath>
 	</parent>
 
 </project>
