--- a/lilith-xml-logging/pom.xml
+++ b/lilith-xml-logging/pom.xml
@@ -19,7 +19,7 @@
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
 <!-- LV --><version>0.9.33-SNAPSHOT</version>
-		<relativePath>../lilith-parent</relativePath>
+		<relativePath>../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
 	<dependencies>
