Added EventIdentifier that will be needed for caching of condition results. Changed EventWrapper to use EventIdentifier instead of Source ID + localId. Since this changes serialization anyway I took the opportunity to also add omittedElements to ThrowableInfo. Updated xml IO accordingly.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@97 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -205,7 +205,13 @@
 				<artifactId>de.huxhorn.sulky.io</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
-			
+
+            <dependency>
+                <groupId>de.huxhorn.sulky</groupId>
+                <artifactId>de.huxhorn.sulky.junit</artifactId>
+                <version>${sulkyVersion}</version>
+            </dependency>
+
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.logging</artifactId>
