--- a/lilith-data/eventsource/pom.xml
+++ b/lilith-data/eventsource/pom.xml
@@ -52,5 +52,11 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>de.huxhorn.sulky</groupId>
+            <artifactId>de.huxhorn.sulky.junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 	</dependencies>
 </project>
