Caching of active condition results. Added buildnumber.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@102 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -472,9 +472,9 @@
 				<artifactId>buildnumber-maven-plugin</artifactId>
 				<version>1.0-beta-1</version>
 				<configuration>
-					<format>{0,date,yyyy-MM-dd'T'HH:mm:ss}</format>
+					<format>{0}</format>
 					<items>
-						<item>timestamp</item>
+                        <item>buildNumber</item>
 					</items>
 					<doCheck>false</doCheck>
 					<doUpdate>false</doUpdate>
@@ -488,6 +488,34 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                           <Implementation-Build>${buildNumber}</Implementation-Build>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <manifest>
+                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                    </manifest>
+                    <archive>
+                        <manifestEntries>
+                            <Implementation-Build>${buildNumber}</Implementation-Build>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
