--- a/lilith/src/main/resources/app.properties
+++ b/lilith/src/main/resources/app.properties
@@ -1,3 +1,4 @@
 application.name=${pom.name}
 application.version=${pom.version}
-application.timestamp=${buildNumber}
+application.buildNumber=${buildNumber}
+application.timestamp=${timestamp}
