--- a/lilith/src/main/resources/app.properties
+++ b/lilith/src/main/resources/app.properties
@@ -2,3 +2,4 @@ application.name=${pom.name}
 application.version=${pom.version}
 application.buildNumber=${buildNumber}
 application.timestamp=${timestamp}
+application.revision=$Revision$
