Added unit-tests for all data-types. Fixed auto-update of detailsView.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@118 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-data/logging/pom.xml
+++ b/lilith-data/logging/pom.xml
@@ -55,6 +55,12 @@
 			<scope>test</scope>
 		</dependency>
 
+        <dependency>
+            <groupId>de.huxhorn.sulky</groupId>
+            <artifactId>de.huxhorn.sulky.junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
