Fixed author email address *sigh* Added blurb about the origin of the splash screen.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@129 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -317,7 +317,7 @@
 	<developers>
 		<developer>
 			<id>huxhorn</id>
-			<email>huxhorn@sourceforge.net</email>
+			<email>huxhorn@users.sourceforge.net</email>
 			<name>Joern Huxhorn</name>
 			<organization>Joern Huxhorn</organization>
 			<organizationUrl>http://lilith.huxhorn.de</organizationUrl>
