--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -334,6 +334,14 @@
 			<scope>compile</scope>
 		</dependency>
 
+        <!--
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+        -->
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
