Changed license from GPLv3 to LGPLv3. GPL license was inherited from parent and not properly overwritten. Also added some missing license information.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@134 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/access-adapter/pom.xml
+++ b/logback/access-adapter/pom.xml
@@ -22,6 +22,14 @@
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License v3 (LGPL)</name>
+			<url>http://www.gnu.org/copyleft/lesser.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
 	<dependencies>
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
