Created NDC for use with Lilith appenders. See ticket:27.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@138 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -37,6 +37,7 @@
 	</distributionManagement>
 
 	<modules>
+		<module>classic</module>
 		<module>logging-adapter</module>
 		<module>access-adapter</module>
 		<module>event-producers</module>
