Updated LogbackLoggingAdapter to use the NDC of events. Seet ticket:27.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@139 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -141,6 +141,12 @@
 
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.logback.classic</artifactId>
+				<version>${lilithVersion}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.appender.multiplex-core</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
